@@ -54,13 +54,41 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>11</release>
+<!--          <release>11</release>-->
+          <source>11</source>
+          <target>11</target>
+          <compilerArgs>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=javac.plugin</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=javac.plugin</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=javac.plugin</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
         <version>3.0.0-M5</version>
+        <configuration>
+          <!--
+            - -add-reads <module>=<target-module>(,<target-module>)*
+                              updates <module> to read <target-module>, regardless
+                              of module declaration.
+                              <target-module> can be ALL-UNNAMED to read all unnamed
+                              modules.
+            - -add-exports <module>/<package>=<target-module>(,<target-module>)*
+                              updates <module> to export <package> to <target-module>,
+                              regardless of module declaration.
+                              <target-module> can be ALL-UNNAMED to export to all
+                              unnamed modules.
+            - -add-opens <module>/<package>=<target-module>(,<target-module>)*
+                              updates <module> to open <package> to
+                              <target-module>, regardless of module declaration.
+
+          -->
+          <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.api=javac.plugin</argLine>
+          <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.tree=javac.plugin</argLine>
+          <argLine>--add-exports=jdk.compiler/com.sun.tools.javac.util=javac.plugin</argLine>
+        </configuration>
         <executions>
           <execution>
             <goals>
